--- a/VisualRL/config/agents/dbc.yaml
+++ b/VisualRL/config/agents/dbc.yaml
@@ -1,3 +1,4 @@
+agent_name: 'dbc'
 transition_model_type: 'deterministic'
 hidden_dim: 256
 discount: 0.99
@@ -25,3 +26,6 @@ num_layers: 4
 num_filters: 32
 bisim_coef: 0.5
 builtin_encoder: True
+frame_stack: 3
+image_size: 84
+
