--- a/VisualRL/config/agents/dbc.yaml
+++ b/VisualRL/config/agents/dbc.yaml
@@ -3,22 +3,22 @@ transition_model_type: 'deterministic'
 hidden_dim: 256
 discount: 0.99
 init_temperature: 0.01
-alpha_lr: 1e-3
+alpha_lr: 1.0e-3
 alpha_beta: 0.9
-actor_lr: 1e-3
+actor_lr: 1.0e-3
 actor_beta: 0.9
 actor_log_std_min: -10
 actor_log_std_max: 2
 actor_update_freq: 2
-critic_lr: 1e-3
+critic_lr: 1.0e-3
 critic_beta: 0.9
 critic_tau: 0.005
 critic_target_update_freq: 2
 encoder_type: 'pixel'
 encoder_feature_dim: 50
 encoder_tau: 0.005
-encoder_lr: 1e-3
-decoder_lr: 1e-3
+encoder_lr: 1.0e-3
+decoder_lr: 1.0e-3
 decoder_update_freq: 1
 decoder_latent_lambda: 0.0
 decoder_weight_lambda: 0.0
@@ -28,4 +28,5 @@ bisim_coef: 0.5
 builtin_encoder: True
 frame_stack: 3
 image_size: 84
-
+buffer_size: 1000
+batch_size: 128
