--- a/VisualRL/config/global.yaml
+++ b/VisualRL/config/global.yaml
@@ -1,90 +1,44 @@
 # Global configuration setting for VisualRL
 
-
-# 1. Saving and logging related
-
-# log_interval: 100
-# save_tb: False
-
-# save_video: False
-# log_video_freq: -1
-# max_videos_to_save: 2
-
-# save_data: False                      # Whether to save the data buffer
-# save_data_interval: 100000            # If `save_data` is True, save the data buffer every `save_data_interval` steps
-# save_data_path: ''                    # If `save_data` is True, save the data buffer to `save_data_path`
-
-# save_checkpoint: False                # Whether to save the checkpoint
-# save_checkpoint_interval: 100000      # If `save_checkpoint` is True, save the checkpoint every `save_checkpoint_interval` steps
-# save_checkpoint_path: ''              # If `save_checkpoint` is True, save the checkpoint to `save_checkpoint_path`
-
-
 # ------------------------General parameters------------------------
-exp_name: "Test"
-seed: 1
+exp_name: "Reproduce-DreamerV1-WalkerWalk"
+
+# set as -1 for random seed
+seed: 0
+
+# set as -1 for cpu training
 gpu: 0
+
 # ------------------------------Agent------------------------------
-agent: "dbc"
-agent_type: "model_free"
+agent: "dreamerv1"
+
+#TODO: notice this!
+model_based: True
+
 # ---------------------------Environment---------------------------
 env: "walker-walk"
-pre_transform_image_size: 84
-image_size: 84
-action_repeat: 2
-frame_stack: 3
 camera_id: 0
 time_limit: 1000
+
 # ---------------------Data collection & replay--------------------
-buffer_size: 1000000
-batch_size: 128
+max_episode_length: 1000
+
 # -----------------------------Training-----------------------------
-init_steps: 1000
+# 1000 for mf methods
+init_steps: 5000
+
 total_steps: 1000000
-update_steps: 1
-# ---------------------------Optimization---------------------------
-actor_lr: 1e-3
-actor_beta: 0.9
 
-critic_lr: 1e-3
-critic_beta: 0.9
+# 1 for mf methods
+update_steps: 100
 
-alpha_lr: 1e-3
-alpha_beta: 0.9
+collect_steps: 1000
 
-encoder_lr: 1e-3
-decoder_lr: 1e-3
-# ------------------------------Actor------------------------------
-actor_log_std_min: -10
-actor_log_std_max: 2
-actor_update_freq: 2
-# ------------------------------Critic------------------------------
-critic_tau: 0.005
-critic_target_update_freq: 2
-# ---------------Network/Encoder/Decoder architecture---------------
-# Network
-num_layers: 4
-num_filters: 32
-hidden_dim: 256
-
-# Encoder
-encoder_type: "pixel"
-encoder_feature_dim: 50
-encoder_tau: 0.005
-bisim_coef: 0.5
-builtin_encoder: True
-detach_encoder: False
-
-# # Decoder
-decoder_type: "pixel"
-decoder_update_freq: 1
-decoder_latent_lambda: 1.0e-6
-decoder_weight_lambda: 1.0e-7
-# --------------------Coefficients and constants--------------------
-discount: 0.99
-init_temperature: 0.1
 # ------------------------Saving and logging------------------------
+eval_freq: 5000
+eval_episodes: 10
 log_interval: 100
-save_tb: False
+save_tb: True
 
 save_video: False
 log_video_freq: -1
