--- a/VisualRL/config/agents/dreamerv1.yaml
+++ b/VisualRL/config/agents/dreamerv1.yaml
@@ -1,3 +1,5 @@
+# Agent name: DreamerV1
+model_based: True
 # ---------------------------Environment---------------------------
 pre_transform_image_size: 64
 image_size: 64
@@ -29,6 +31,7 @@ buffer_size: 1000000
 batch_size: 50
 train_seq_length: 50
 init_steps: 5000
+update_steps: 100
 # ---------------------------World Model---------------------------
 # RSSM
 stoch_size: 30
