--- a/VisualRL/config/agents/sac_ae.yaml
+++ b/VisualRL/config/agents/sac_ae.yaml
@@ -1,15 +1,22 @@
 # Agent name: SAC-AE
-
+model_based: False
 # ---------------------------Environment---------------------------
 pre_transform_image_size: 84
 image_size: 84
 frame_stack: 3
 action_repeat: 2
-
+# ------------------------------SACAE------------------------------
+encoder_lr: 1.0e-3
+decoder_lr: 1.0e-3
+decoder_type: "pixel"
+decoder_update_freq: 1
+decoder_latent_lambda: 1.0e-6
+decoder_weight_lambda: 1.0e-7
 # ---------------------Data collection & replay--------------------
 buffer_size: 1000000
 batch_size: 128
-
+init_steps: 1000
+update_steps: 1
 # ---------------Network/Encoder/Decoder architecture---------------
 # Encoder
 encoder_type: "pixel"
@@ -21,7 +28,6 @@ builtin_encoder: True
 num_layers: 4
 num_filters: 32
 hidden_dim: 1024
-
 # ------------------------------Actor------------------------------
 # Optimization
 actor_lr: 1.0e-3
@@ -30,7 +36,6 @@ actor_beta: 0.9
 actor_log_std_min: -10
 actor_log_std_max: 2
 actor_update_freq: 2
-
 # ------------------------------Critic------------------------------
 # Optimization
 critic_lr: 1.0e-3
@@ -38,20 +43,12 @@ critic_beta: 0.9
 
 critic_tau: 0.01
 critic_target_update_freq: 2
-
 # --------------------Coefficients and constants--------------------
 discount: 0.99
 init_temperature: 0.1
 alpha_lr: 1.0e-4
 alpha_beta: 0.5
-
 # -----------------------Saving and Restoring-----------------------
 max_videos_to_save: 2
-
-# ------------------------------SACAE------------------------------
-encoder_lr: 1.0e-3
-decoder_lr: 1.0e-3
-decoder_type: "pixel"
-decoder_update_freq: 1
-decoder_latent_lambda: 1.0e-6
-decoder_weight_lambda: 1.0e-7
+restore: False
+policy_checkpoint_path: ''
